# STRR

./: .gitignore  Makefile  README.md  codecov.yaml  docker-compose.yml
.github/workflows/: strr-api-cd.yaml  strr-api-ci.yaml  strr-api-ci.yml  strr-ui-cd.yaml  strr-ui-ci.yaml  strr-ui-ci.yml  strr-ui-main-cd.yml
rfcs/: rfc-registration-application.md
strr-api/: .coveragerc  .dockerignore  .env.local  .env.sample  .gcloudignore  Dockerfile  Makefile  README.md  gunicorn_config.py  pyproject.toml  pytest.ini  wsgi.py
strr-api/.devcontainer/: Dockerfile
strr-api/devops/: vaults.gcp.env
strr-api/devops/gcp/: clouddeploy-targets.yaml  clouddeploy.yaml
strr-api/migrations/raw_sql/: gis_ddl.sql
strr-api/migrations/versions/: 20240423_191f8d1ddc48_.py  20240522_7026f9b26d3f_.py  20240522_dbdabde037cc_.py  20240523_3d7b4953b1ee_.py  20240524_894fe4847de6_.py  20240530_4298c4cb3f07_.py  20240617_4b06b9e4a053_.py  20240703_412aa6608c42_.py  20240703_aa4d983f79c4_.py  20240703_e6efc402c14d_.py  20240704_420791ae10dc_.py  20240704_a5de00ec274f_.py  20240706_ed33e07431ea_.py  20240712_0647_d5f96ce5ad98_.py  20240714_269514c7d861_.py  20240719_2b707ec995f7_.py  20240722_2227_7aa7d47cece4_.py
strr-api/src/strr_api/: __init__.py  config.py  logging.py
strr-api/src/strr_api/common/: auth.py  enum.py  error.py  flags.py  utils.py
strr-api/src/strr_api/enums/: enum.py  log_level.py
strr-api/src/strr_api/exceptions/: __init__.py  exceptions.py  responses.py
strr-api/src/strr_api/models/: __init__.py  application.py  auto_approval_record.py  base_model.py  certificate.py  dataclass.py  db.py  dss.py  event_record.py  invoice.py  ltsa.py  rental.py  user.py
strr-api/src/strr_api/requests/: RegistrationRequest.py  SBCAccountCreationRequest.py  UpdateUserRequest.py  __init__.py
strr-api/src/strr_api/resources/: __init__.py  account.py  application.py  base.py  json_schema.py  ops.py  payment.py  registrations.py
strr-api/src/strr_api/responses/: AccountResponse.py  AutoApprovalRecordResponse.py  AutoApprovalResponse.py  DocumentResponse.py  EventRecordResponse.py  LTSARecordResponse.py  LTSAResponse.py  Pagination.py  RegistrationResponse.py  SBCAccountResponse.py  __init__.py
strr-api/src/strr_api/schemas/: utils.py
strr-api/src/strr_api/schemas/schemas/: create_sbc_account.json  garbage.json  goodbye.json  new_account.json  registration.json  update_account.json
strr-api/src/strr_api/services/: __init__.py  application_service.py  approval_service.py  auth_service.py  entity.py  event_records_service.py  gcp_storage_service.py  geocoder_service.py  json_schema.py  ltsa_service.py  pay.py  payment_service.py  registration_service.py  rest_service.py
strr-api/src/strr_api/templates/: certificate.html
strr-api/src/strr_api/translations/: __init__.py
strr-api/src/strr_api/utils/: user_context.py
strr-api/src/strr_api/validators/: DocumentUploadValidator.py  RegistrationRequestValidator.py  SBCAccountCreationRequestValidator.py  __init__.py
strr-api/tests/: conftest.py
strr-api/tests/mocks/json/: geocoder_address.json  ltsa_title_order.json  ltsa_title_summaries.json  new_sbc_account.json  patch_account_tos.json  registration.json  registration_new_sbc_account.json  registration_use_sbc_account.json  registration_use_sbc_account_ltsa.json  registration_use_sbc_account_minimum.json
strr-api/tests/postman/: strr-api.postman_collection.json  strr-api.postman_environment.json
strr-api/tests/unit/common/: test_base_enum.py  test_flags.py  test_run_version.py
strr-api/tests/unit/models/: test_submission.py  test_user.py
strr-api/tests/unit/resources/: test_account.py  test_base.py  test_json_schema.py  test_ops.py  test_payment.py  test_registration_applications.py  test_registrations.py  test_submissions.py
strr-api/tests/unit/schemas/: test_utils.py
strr-api/tests/unit/services/: test_approval.py  test_entity.py  test_event_record.py  test_ltsa.py  test_pay.py
strr-api/tests/unit/utils/: __init__.py  auth_helpers.py  mock_data.py  mocks.py
strr-web/: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  README.md  firebase.json  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vitest.config.mts
(+215 files in other folders)
